--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -2,7 +2,7 @@ projects:
   - title: "MochaSimplifier"
     subtitle: "Web app for accessible text extraction and simplification from images and PDFs, focused on cognitive accessibility. Leverages OCR and LLMs to make text easier to read for everyone."
     year: 2025
-    frameworks: '<p style="color:#4a6fa5;">TypeScript, React, OCR, OpenAI</p>'
+    frameworks: '<p style="color:#888;">TypeScript, React, OCR, OpenAI</p>'
     selected: n
     image: "assets/projects/2025-mocha-simplifier/thumbnail.png"
     code: "https://github.com/mustafasameen/mocha-simplifier"
@@ -10,7 +10,7 @@ projects:
   - title: "SCAC Esports Statistics Tracker"
     subtitle: "Built an OCR-powered system for automated esports data extraction, match outcome prediction, and real-time analytics for SCAC tournaments."
     year: 2025
-    frameworks: '<p style="color:#4a6fa5;">React, Flask, OCR</p>'
+    frameworks: '<p style="color:#888;">React, Flask, OCR</p>'
     selected: n
     image: "assets/projects/2025-esports-tracker/thumbnail.png"
     code: "https://github.com/jcandrews2/senior-capstone-project"
