--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -12,12 +12,12 @@ experiences:
   - place: "CC Math and CS Department"
     time: "Summer 2024"
     title: "Summer Research Assistant"
-    subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/rennie_robert_joseph.html' style='text-decoration: none;'>Prof. Robert Rennie</a>"
+    subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/rennie_robert_joseph.html' style='text-decoration: none; color: #555;'>Prof. Robert Rennie</a>"
     category: "left"
   - place: "State of the Rockies"
     time: "May 2023 - Present"
     title: "Research Fellow"
-    subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/hines_cyndy.html' style='text-decoration: none;'>Cyndy Hines</a>"
+    subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/hines_cyndy.html' style='text-decoration: none; color: #555;'>Cyndy Hines</a>"
     category: "right"
   - place: "Tuck at Dartmouth"
     time: "Winter 2023"
