--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,23 +1,23 @@
 experiences:
   - place: "Colorado College"
-    time: "Aug. 2021 - May 2025 (Expected)"
+    time: "Aug. 2021 - May 2025"
     title: "B.A. in Computer Science & Mathematics"
     subtitle: "GPA: 4.0/4.0, Phi Beta Kappa"
     category: "left"
-  - place: "SocialTechLab Inc."
-    time: "Jun. 2024 - Aug. 2024"
-    title: "Software Engineer Intern"
-    subtitle: "SwiftUI, AWS, Go"
+  - place: "State of the Rockies"
+    time: "May 2023 - May 2025"
+    title: "Research Fellow"
+    subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/hines_cyndy.html' style='text-decoration: none; color: #555;'>Cyndy Hines</a>"
     category: "right"
   - place: "CC Math and CS Department"
     time: "Summer 2024"
     title: "Summer Research Assistant"
     subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/rennie_robert_joseph.html' style='text-decoration: none; color: #555;'>Prof. Robert Rennie</a>"
     category: "left"
-  - place: "State of the Rockies"
-    time: "May 2023 - Present"
-    title: "Research Fellow"
-    subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/hines_cyndy.html' style='text-decoration: none; color: #555;'>Cyndy Hines</a>"
+  - place: "SocialTechLab Inc."
+    time: "Summer 2024"
+    title: "Software Engineer Intern"
+    subtitle: "SwiftUI, AWS, Go"
     category: "right"
   - place: "Tuck at Dartmouth"
     time: "Winter 2023"
