--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,6 +1,6 @@
 news:
-  - content: '<b style="color: #888;">April, 2025</b>&nbsp;&nbsp;&nbsp;&nbsp; Presented <a target="_blank" style="text-decoration: none; color: #222">"FORMAL: Democratizing Lean 4 Formalization Through Retrieval-Augmented Thinking and Agentic Feedback Loops"</a> at the <a href="https://www.mathforallconference.com/in-person-locations/boulder-co" target="_blank" style="text-decoration: none; color:#555;"><b>Math for All Conference 2025</b></a>'
+  - content: '<b style="color: #111;">April, 2025</b>&nbsp;&nbsp;&nbsp;&nbsp; Presented <a target="_blank" style="text-decoration: none; color: #222">"FORMAL: Democratizing Lean 4 Formalization Through Retrieval-Augmented Thinking and Agentic Feedback Loops"</a> at the <a href="https://www.mathforallconference.com/in-person-locations/boulder-co"><u>Math for All Conference 2025</u></a>'
     year: "2025"
 
-  - content: '<b style="color: #888;">April, 2025</b>&nbsp;&nbsp;&nbsp;&nbsp; Will be joining the <a href="https://faculty.eng.ufl.edu/sermos-lab/" style="text-decoration: none; color: #555;"><b>SERMoS Lab@University of Florida</b></a> this Fall as a Ph.D. Student!'
+  - content: '<b style="color: #111;">April, 2025</b>&nbsp;&nbsp;&nbsp;&nbsp; Will be joining the <a href="https://faculty.eng.ufl.edu/sermos-lab/"><u>SERMoS Lab@University of Florida</u></a> this Fall as a Ph.D. Student!'
     year: "2025"
