added images to experience

--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,31 +1,43 @@
 experiences:
+  - place: "Urban Mobility Lab at MIT"
+    time: "Summer 2025"
+    title: "Summer Research Intern"
+    subtitle: "Advisor: <a href='https://mobility.mit.edu/people/muhammad-usama' style='text-decoration: none; color: #555;'>Dr Muhammad Usama</a>"
+    category: "right"
+    image: "assets/experiences/mit.png"
   - place: "Colorado College"
     time: "Aug. 2021 - May 2025"
     title: "B.A. in Computer Science & Mathematics"
     subtitle: "GPA: 4.0/4.0, Phi Beta Kappa"
     category: "left"
+    image: "assets/experiences/colorado-college.svg"
   - place: "State of the Rockies"
     time: "May 2023 - May 2025"
     title: "Research Fellow"
     subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/hines_cyndy.html' style='text-decoration: none; color: #555;'>Cyndy Hines</a>"
     category: "right"
+    image: "assets/experiences/state-of-the-rockies.jpg"
   - place: "CC Math and CS Department"
     time: "Summer 2024"
     title: "Summer Research Assistant"
     subtitle: "Advisor: <a href='https://www.coloradocollege.edu/basics/contact/directory/people/rennie_robert_joseph.html' style='text-decoration: none; color: #555;'>Prof. Robert Rennie</a>"
     category: "left"
+    image: "assets/experiences/colorado-college-2.png"
   - place: "SocialTechLab Inc."
     time: "Summer 2024"
     title: "Software Engineer Intern"
     subtitle: "SwiftUI, AWS, Go"
     category: "right"
+    image: "assets/experiences/social-tech-lab.png"
   - place: "Tuck at Dartmouth"
     time: "Winter 2023"
     title: "Tuck Bridge Business Program"
     subtitle: "Finance, Valuation Analysis"
     category: "left"
+    image: "assets/experiences/tuck.jpg"
   - place: "AIT"
     time: "Aug. 2023 - Dec. 2023"
     title: "Semester Abroad in Computer Science"
     subtitle: "GPA: 5.00/5.00"
     category: "right"
+    image: "assets/experiences/ait.jpeg"
