--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,7 @@
 news:
+  - content: '<b style="color: #111;">June, 2025</b>&nbsp;&nbsp;&nbsp;&nbsp; Accepted to the <a href="https://drive.google.com/file/d/1tsmnMaFz4UBJoEONUiTe7JVnB3LuySLS/view"><u>MIT-UF-NEU 2025</u></a> Joint Summer Research Camp</u></a> under <a href="https://mobility.mit.edu/people/muhammad-usama"><u>Dr. Muhammad Usama</u></a>, joining the <a href="https://mobility.mit.edu"><u>JTL Urban Mobility Lab at MIT</u></a>.'
+    year: "2025"
+
   - content: '<b style="color: #111;">April, 2025</b>&nbsp;&nbsp;&nbsp;&nbsp; Presented <a target="_blank" style="text-decoration: none; color: #222">"FORMAL: Democratizing Lean 4 Formalization Through Retrieval-Augmented Thinking and Agentic Feedback Loops"</a> at the <a href="https://www.mathforallconference.com/in-person-locations/boulder-co"><u>Math for All Conference 2025</u></a>'
     year: "2025"
 
